listMe/styles.css
/* ---------------------------- Variables ----------------------------- */
html:not(.dark) {
    /* Primary color and variations */
     --clr-primary-lighter: hsl(205, 86%, 81%);
     --clr-primary: #49a6e9;
     --clr-primary-darker: rgba(0, 51, 87, .6);
    /* darkest grey - used for headings */
     --clr-grey-1: hsl(209, 61%, 16%);
     --clr-grey-2: hsl(211, 39%, 23%);
    /* grey used for paragraphs */
     --clr-grey-3: hsl(210, 22%, 49%);
     --clr-bg-primary: hsl(206, 44%, 94%);
     --clr-bg-secondary: #fff;
     --clr-base: #fff;
     --clr-base-lighter: #fff;
     --clr-cancel-dark: hsl(360, 67%, 44%);
     --clr-cancel-light: hsl(360, 71%, 66%);
     --clr-red-dark: hsl(360, 67%, 44%);
     --clr-red-light: hsl(360, 71%, 66%);
     --clr-green-dark: hsl(125, 67%, 44%);
     --clr-green-light: hsl(125, 71%, 66%);
     --clr-black: #222;
     --ff-primary: "Roboto", sans-serif;
     --ff-secondary: "Open Sans", sans-serif;
     --transition: all .3s linear;
     --spacing: .25rem;
     --radius: .5rem;
     --light-shadow: 0 5px 15px rgba(0, 0, 0, .1);
     --dark-shadow: 0 5px 15px rgba(0, 0, 0, .2);
     --max-width: 1170px;
     --fixed-width: 620px;
}

html.dark {
    /* Primary color and variations */
     --clr-primary-lighter: rgb(45,45,45);
     --clr-primary: rgb(35,35,35);
     --clr-primary-darker: rgb(155, 155, 155);
    /* darkest grey - used for headings */
     --clr-grey-1: #ccc;
     --clr-grey-2: #bbb;
    /* grey used for paragraphs */
     --clr-grey-3: grey;
     --clr-bg-primary: rgb(45,45,45);
     --clr-bg-secondary: rgb(40,40,40);
     --clr-base: #424242;
     --clr-base-lighter: #aaa;
     --clr-cancel-dark:  rgb(35,35,35);
     --clr-cancel-light:  rgb(45,45,45);
     --clr-red-dark: rgb(227,77,77);
     --clr-red-light: rgb(210, 87, 87);
     --clr-green-dark: hsl(125, 67%, 44%);
     --clr-green-light: hsl(125, 71%, 66%);
     --clr-black: #222;
     --ff-primary: "Roboto", sans-serif;
     --ff-secondary: "Open Sans", sans-serif;
     --transition: all .3s linear;
     --spacing: .25rem;
     --radius: .5rem;
     --light-shadow: 0 5px 15px rgba(0, 0, 0, .1);
     --dark-shadow: 0 5px 15px rgba(0, 0, 0, .2);
     --max-width: 1170px;
     --fixed-width: 620px;
}
/* ---------------------------- Global Styles ----------------------------- */
 *, ::after, ::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
}
 body {
     font-family: var(--ff-secondary);
     background: var(--clr-bg-primary);
     color: var(--clr-grey-1);
     line-height: 1.5;
     font-size: .875rem;
}
 input:focus, button:focus, a:focus, textarea:focus, select:focus {
     outline: none;
     border: none;
     filter: brightness(95%) drop-shadow(0 1px);
}
 ul {
     list-style-type: none;
}
 a {
     text-decoration: none;
}
 img {
     display: block;
     width: 100%;
}
 h3 {
     letter-spacing: var(--spacing);
     text-transform: capitalize;
     line-height: 1.25;
     font-family: var(--ff-primary);
     font-size: 1.25rem;
     color: var(--clr-primary-darker);
     margin-bottom: 1.5rem;
     text-align: center;
     position: relative;
}
 p {
     margin-bottom: 1.25rem;
     color: var(--clr-grey-3);
}
/* ---------------------------- ListMe Styles ----------------------------- */
 .section-center {
     width: 90vw;
     margin: 0 auto;
     max-width: 36rem;
     margin-top: 8rem;
     background: var(--clr-bg-secondary);
     border-radius: var(--radius);
     box-shadow: var(--light-shadow);
     transition: var(--transition);
     padding: 2rem;
     position: relative;
}
 .section-center:hover {
     box-shadow: var(--dark-shadow);
}
 .alert {
     margin-bottom: 1rem;
     height: 1.25rem;
     display: grid;
     align-items: center;
     text-align: center;
     font-size: .7rem;
     border-radius: .25rem;
     letter-spacing: var(--spacing);
     text-transform: capitalize;
}
 :not(.dark) .alert-danger {
     color: #721c24;
     background: #f8d7da;
}

.dark .alert-danger {
    color: rgb(255, 12, 12);
    background: #333;
}

:not(.dark) .alert-success {
     color: #155724;
     background: #d4edda;
}

.dark .alert-success {
    color: rgb(12, 180, 12);
     background: #333;
}
 .form-control, .frequency-control, #date-control, .dynamic-container{
     display:flex;
     margin-top: 10px;
     width:100%;
}
 .form-control {
     justify-content: center;
}
 .frequency-control, .dynamic-container {
     justify-content: space-between;
}
 .frequency-control * {
     cursor: pointer;
}
 #date-control {
     justify-content: flex-end;
}
 .dynamic-options {
     flex: 2;
     display: flex;
     justify-content: space-around;
}
 input[type="radio"], input[type="number"], input[type="checkbox"] {
     margin-right: 5px;
}
 input[type="number"] {
     width: 40px;
     text-align: center;
     color: var(--clr-grey-2);
     border: 1px solid var(--clr-primary-darker);
     background: var(--clr-base)

}
 #itemInput {
     padding: .25rem;
     padding-left: 1rem;
     background: var(--clr-bg-primary);
     border-top-left-radius: var(--radius);
     border-bottom-left-radius: var(--radius);
     border-color: transparent;
     font-size: 1rem;
     flex: 1 0 auto;
     color: var(--clr-grey-3);
}
 #itemInput::placeholder {
     font-family: var(--ff-secondary);
     color: var(--clr-grey-3);
}
 .submit, .cancel {
     background: var(--clr-primary-lighter);
     border-color: transparent;
     outline: none;
     flex: 0 0 5rem;
     display: grid;
     align-items: center;
     padding: .25rem;
     text-transform: capitalize;
     letter-spacing: 2px;
     border-top-right-radius: var(--radius);
     border-bottom-right-radius: var(--radius);
     cursor: pointer;
     content: var(--clr-primary);
     transition: var(--transition);
     font-size: .85rem;
     margin-left: 10px;
     color: var(--clr-grey-2)
}
 .cancel {
     background: var(--clr-cancel-light);
}
 .hidden {
     display: none;
}
 .submit:hover {
     background: var(--clr-primary);
     color: var(--clr-base-lighter );
}
 .cancel:hover {
     background: var(--clr-cancel-dark);
     color: var(--clr-base-lighter );
}
 .list-container {
     margin-top: 2rem;
     transition: var(--transition);
     visibility: hidden;
}
 .show-container {
     visibility: visible;
}
 .list-items {
     display: flex;
     flex-direction: column;
}
 .list-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: .5rem;
     transition: var(--transition);
     padding: .25rem 1rem;
     border-radius: var(--radius);
     text-transform: capitalize;
}
 .list-item:hover {
     color: var(--clr-grey-3);
     background: var(--clr-bg-primary);
}
 .list-item:hover .title {
     color: var(--clr-grey-3);
}
 .title {
     margin-bottom: 0;
     color: var(--clr-grey-1);
     letter-spacing: 2px;
     transition: var(--transition);
     text-transform: none;
     cursor: pointer;
}
 .completed {
     color: var(--clr-grey-3) !important;
     text-decoration: line-through;
}
 .edit-btn, .delete-btn, .clear-btn {
     background: transparent;
     border-color: transparent;
     font-size: .7rem;
     margin: 0 .15rem;
     cursor: pointer;
}
 .edit-btn {
     color: var(--clr-green-light);
}
 .edit-btn:hover {
     color: var(--clr-green-dark);
}
 .delete-btn {
     color: var(--clr-red-light);
}
 .delete-btn:hover {
     color: var(--clr-red-dark);
}
 .clear-btn {
     text-transform: capitalize;
     width: 10rem;
     height: 1.5rem;
     display: grid;
     align-items: center;
     color: var(--clr-cancel-light);
     margin: 0 auto;
     font-size: .85rem;
     letter-spacing: var(--spacing);
     margin-top: 1.25rem;
}
 .archive-btn {
     position: absolute;
     left: 0;
     top: .7rem;
     border: none;
     font-size: 1rem;
     cursor: pointer;
     transition: var(--transition);
     color: var(--clr-primary-darker);
     background:transparent;
}
 .archive-btn:hover {
     transform: rotateZ(10deg);
}
 .reset-btn {
     position: absolute;
     right: 0;
     border: none;
     font-size: 1rem;
     cursor: pointer;
     transition: var(--transition);
     color: var(--clr-primary-darker);
     background: transparent;
}
 .reset-btn:hover {
     transform: rotateZ(60deg);
}
 .clear-btn:hover {
     color: var(--clr-cancel-dark);
}
 #task-type, #pickDate{
     color: var(--clr-grey-2);
     border: 1px solid var(--clr-primary-darker);
     background: var(--clr-base)
}
 .type {
     width: 10px;
     height: 10px;
     display: inline-block;
     border-radius: 100%;
}
 .type[data-type="1"] {
     background-color: rgba(220, 34, 29, 0.8);
}
 .type[data-type="2"] {
     background-color: rgba(0, 255, 0, .6);
}
 .type[data-type="3"] {
     background-color: rgba(0, 0, 255, .6);
}
 .type[data-type="4"] {
     background-color: rgba(255, 0, 255, .6);
}
 .type[data-type="5"] {
     background-color: rgba(0, 255, 255, .6);
}
 .type[data-type="6"] {
     background-color: rgba(255, 255, 0, 1);
}
 .type[data-type="7"] {
     background-color: rgb(255, 123, 0);
}
 .type[data-type="8"] {
     background-color:rgb(161, 128, 74);
}
.type[data-type="9"] {
    background-color: rgba(0, 0, 0, .6);
}

.toggle-darkmode {
    position: absolute;
    top:10px;
    right:10px;
    font-size: 24px;
    border: none;
    background: transparent;
    cursor: pointer;
}

.moon {
    color: rgba(255,255,255,0.3)
}

.sun {
    color: rgba(0,0,0,0.2)
}

.moon:hover, .sun:hover{
    opacity: 0.8;
}

 @media screen and (min-width: 800px) {
     h3 {
         font-size: 1.75rem;
         line-height: 1;
    }
     body {
         font-size: 1rem;
    }
     .section-center {
         width: 95vw;
    }
}

